// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="header">
    <div class="innerHeader"><a class="iconButton logo logo" title="Home">
        <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="inner">
            <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="iconButton button button" type="submit">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <!--v-if-->
    </div>
  </header>
  <aside class="sidebarNavigation">
    <div class="sideBar">
      <div class="header"><a class="iconButton logo logo" title="Home">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
        </a><button class="iconButton" type="button" title="Close Navigation">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul class="navigation">
          <li class="sidebarItem"><a class="titleLink" title="Browse">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,compass" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Browse</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compass" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Discover</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Music">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Music</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Radio Stations</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Podcasts</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Your library">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,music" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Your library</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Albums</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Artists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Playlists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Favourites</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Genres</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Playlists">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,list" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Playlists</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Random">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Random</span>
                </a>
                <!--v-if-->
              </li>
              <li>
                <!--v-if-->
                <!--v-if-->
              </li>
              <li>
                <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,plus-circle" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Add playlist </span>
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </aside>
  <main class="mainContent">
    <div style="display: none;"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="75"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden">Loading data</span></div>
    <div class="mainContentInner">
      <div></div>
    </div>
  </main>
</div>"
`;

exports[`Default > when loading is false > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="header">
    <div class="innerHeader"><a class="iconButton logo logo" title="Home">
        <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="inner">
            <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="iconButton button button" type="submit">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="secondary">
        <div class="secondaryItem"><button class="iconButton" type="button" title="Activate dark mode">
            <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,moon" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="View account details">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,ellipsis-vertical" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"></span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside class="sidebarNavigation">
    <div class="sideBar">
      <div class="header"><a class="iconButton logo logo" title="Home">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
        </a><button class="iconButton" type="button" title="Close Navigation">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul class="navigation">
          <li class="sidebarItem"><a class="titleLink" title="Browse">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,compass" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Browse</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compass" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Discover</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Music">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Music</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Radio Stations</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Podcasts</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Your library">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,music" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Your library</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Albums</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Artists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Playlists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Favourites</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Genres</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Playlists">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,list" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Playlists</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Random">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Random</span>
                </a>
                <!--v-if-->
              </li>
              <li>
                <!--v-if-->
                <!--v-if-->
              </li>
              <li>
                <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,plus-circle" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Add playlist </span>
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </aside>
  <main class="mainContent">
    <div style="display: none;"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="75"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden">Loading data</span></div>
    <div class="mainContentInner">
      <div></div>
    </div>
  </main>
</div>"
`;

exports[`Default > when loading is true > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="header">
    <div class="innerHeader"><a class="iconButton logo logo" title="Home">
        <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="inner">
            <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="iconButton button button" type="submit">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="secondary">
        <div class="secondaryItem"><button class="iconButton" type="button" title="Activate dark mode">
            <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,moon" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="View account details">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,ellipsis-vertical" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"></span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside class="sidebarNavigation">
    <div class="sideBar">
      <div class="header"><a class="iconButton logo logo" title="Home">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
        </a><button class="iconButton" type="button" title="Close Navigation">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul class="navigation">
          <li class="sidebarItem"><a class="titleLink" title="Browse">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,compass" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Browse</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compass" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Discover</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Music">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Music</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Radio Stations</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Podcasts</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Your library">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,music" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Your library</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Albums</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Artists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Playlists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Favourites</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Genres</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Playlists">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,list" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Playlists</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Random">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Random</span>
                </a>
                <!--v-if-->
              </li>
              <li>
                <!--v-if-->
                <!--v-if-->
              </li>
              <li>
                <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,plus-circle" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Add playlist </span>
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </aside>
  <main class="mainContent">
    <div style="display: none;"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="75"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden">Loading data</span></div>
    <div class="mainContentInner">
      <div></div>
    </div>
  </main>
</div>"
`;

exports[`Default > when user is defined > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="header">
    <div class="innerHeader"><a class="iconButton logo logo" title="Home">
        <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="inner">
            <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="iconButton button button" type="submit">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="secondary">
        <div class="secondaryItem"><button class="iconButton" type="button" title="Activate dark mode">
            <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,moon" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="View account details">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,ellipsis-vertical" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"></span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside class="sidebarNavigation">
    <div class="sideBar">
      <div class="header"><a class="iconButton logo logo" title="Home">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
        </a><button class="iconButton" type="button" title="Close Navigation">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul class="navigation">
          <li class="sidebarItem"><a class="titleLink" title="Browse">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,compass" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Browse</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compass" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Discover</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Music">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Music</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Radio Stations</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Podcasts</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Your library">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,music" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Your library</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Albums</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Artists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Playlists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Favourites</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Genres</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Playlists">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,list" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Playlists</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Random">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Random</span>
                </a>
                <!--v-if-->
              </li>
              <li>
                <!--v-if-->
                <!--v-if-->
              </li>
              <li>
                <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,plus-circle" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Add playlist </span>
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </aside>
  <main class="mainContent">
    <div style="display: none;"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="75"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden">Loading data</span></div>
    <div class="mainContentInner">
      <div></div>
    </div>
  </main>
</div>"
`;

exports[`Default > when user is defined > when DropdownMenu button is clicked > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="header">
    <div class="innerHeader"><a class="iconButton logo logo" title="Home">
        <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="inner">
            <div class="inputField input"><label class="label visually-hidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="iconButton button button" type="submit">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,search" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="secondary">
        <div class="secondaryItem"><button class="iconButton" type="button" title="Activate dark mode">
            <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,moon" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="dropdown"><button class="iconButton alignRight button button" type="button" title="View account details">
              <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,ellipsis-vertical" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"></span>
            </button>
            <div class="dropdownMenu">
              <ul class="menu">
                <li class="dropdownItem" to="/user-profile"><a class="iconButton fullWidth action action">
                    <!--v-if--><span class="text">Profile</span>
                  </a></li>
                <li class="dropdownItem" target="_blank"><a class="iconButton fullWidth action action" target="_blank">
                    <!--v-if--><span class="text"> Server </span>
                  </a></li>
                <li class="divider" aria-hidden="true"></li>
                <li class="dropdownItem" icon="right-from-bracket"><button class="iconButton alignRight fullWidth action action" type="button">
                    <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,right-from-bracket" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Log out </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside class="sidebarNavigation">
    <div class="sideBar">
      <div class="header"><a class="iconButton logo logo" title="Home">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,wave-square" size="xl" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden"> Home </span>
        </a><button class="iconButton" type="button" title="Close Navigation">
          <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,angles-left" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text visually-hidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul class="navigation">
          <li class="sidebarItem"><a class="titleLink" title="Browse">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,compass" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Browse</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compass" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Discover</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Music">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,headphones" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Music</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,radio" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Radio Stations</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,podcast" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Podcasts</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Your library">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,music" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Your library</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,compact-disc" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Albums</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,users" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Artists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Playlists</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,heart" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Favourites</span>
                </a>
                <!--v-if-->
              </li>
              <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,music" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Genres</span>
                </a>
                <!--v-if-->
              </li>
            </ul>
          </li>
          <li class="sidebarItem"><a class="titleLink" title="Playlists">
              <font-awesome-icon-stub class="titleIcon" aria-hidden="true" icon="fas,list" size="xl" fixed-width=""></font-awesome-icon-stub>
              <h4 class="title">Playlists</h4>
            </a>
            <ul class="items">
              <li><a exactactiveclass="current" class="iconButton link link" title="Random">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,list" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text">Random</span>
                </a>
                <!--v-if-->
              </li>
              <li>
                <!--v-if-->
                <!--v-if-->
              </li>
              <li>
                <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
                  <font-awesome-icon-stub class="icon" aria-hidden="true" icon="fas,plus-circle" size="sm" fixed-width=""></font-awesome-icon-stub><span class="text"> Add playlist </span>
                </button>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </aside>
  <main class="mainContent">
    <div style="display: none;"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="75"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="loading"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visually-hidden">Loading data</span></div>
    <div class="mainContentInner">
      <div></div>
    </div>
  </main>
</div>"
`;
